--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Optics</title>
+<title>10 pour 100</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -41,15 +41,15 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand" href="index.html">Dix</a> </div>
+      <img style="width:150px;height:75px"src="img/logo.png" alt="..." class="team-img">
+    </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#home" class="page-scroll">Home</a></li>
-        <li><a href="#about-section" class="page-scroll">About</a></li>
+        <li><a href="#home" class="page-scroll">Accueil</a></li>
+        <li><a href="#about-section" class="page-scroll">A propos</a></li>
         <li><a href="#services-section" class="page-scroll">Services</a></li>
-        <li><a href="#works-section" class="page-scroll">Portfolio</a></li>
         <li><a href="#team-section" class="page-scroll">Team</a></li>
         <li><a href="#contact-section" class="page-scroll">Contact</a></li>
       </ul>
@@ -62,31 +62,32 @@
 <!-- Header -->
 <header class="text-center" name="home">
   <div class="intro-text">
-    <h1>We are <span class="color">Optics</span></h1>
+    <h1>We are <span class="color">10 pour 100</span></h1>
     <p>An award winning digital design and development company</p>
     <div class="clearfix"></div>
-    <a href="#about-section" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
+    <a href="#about-section" class="btn btn-default btn-lg page-scroll">En apprendre plus</a> </div>
 </header>
 <!-- About Section -->
 <div id="about-section">
   <div class="container">
     <div class="section-title">
-      <h2>About Us</h2>
+      <h2>A propos de nous</h2>
       <hr>
     </div>
     <div class="space"></div>
     <div class="row">
       <div class="col-md-4">
-        <h4>Who We Are</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh ante facilisis bibendum.</p>
+        <h4>Qui sommes nous ?</h4>
+        <p>10 pour 100 est une agence de Marketing digital et Communication opérant depuis Toulouse pour des clients répartis partout en France. Intégrant de nombreux métiers du Web et Marketing nous accompagnons nos clients pas à pas  dans leurs projets</p>
       </div>
       <div class="col-md-4">
-        <h4>What We Do</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh ante facilisis bibendum.</p>
+        <h4>Que faisons nous ? </h4>
+        <p>Notre approche de Conseil en marketing personnalisée permet d'offrir des stratégies adaptées aux besoins de nos clients. Notre agence met un point d'honneur à proposer à tous nos clients des solutions les plus génératrices de visibilité et d'audience. </p>
       </div>
       <div class="col-md-4">
-        <h4>Why Choose Us</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh ante facilisis bibendum.</p>
+        <h4>Pourquoi nous choisir ? </h4>
+        <p>Nous nous occuppons de A à Z de tous la Communication et Marketing de votre société vous pourrez alors vous consacrez entièrement à la gestion de celle-ci. Vous profitez d'une équipe complète pour tous vos besoins pour le prix d'un employé </p>
+        
       </div>
     </div>
   </div>
@@ -95,164 +96,50 @@
 <div id="services-section">
   <div class="container">
     <div class="section-title">
-      <h2>Our Services</h2>
+      <h2>Nos Services</h2>
       <hr>
     </div>
     <div class="space"></div>
     <div class="row">
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-desktop"></i>
         <h4>Web design</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+        <p>Une ergonomie sophistiquée, des dispositifs simples, créatifs et utiles, le tout conçu pour une expérience utilisateur unique.</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-gears"></i>
-        <h4>App Development</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
+        <h4>Reseaux sociaux</h4>
+        <p>Outils incontournables aux marques pour acquérir de la notoriété, identifier des clients et fidéliser les consommateurs.</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-pie-chart"></i>
-        <h4>Analystics</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+        <h4>SEO</h4>
+        <p>Le trafic SEO est la première source de trafic gratuit d’un site internet. Il draine un public qualifié.</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-line-chart"></i>
-        <h4>Marketing</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
+        <h4>Audits</h4>
+        <p>Le recours à un audit marketing permet de mobiliser une expertise extérieure, mais également d’apporter un « regard neuf ».</p>
       </div>
     </div>
     <div class="space"></div>
     <div class="row">
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-shopping-cart"></i>
-        <h4>eCommerce</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+        <h4>Live marketing</h4>
+        <p>Personnaliser votre offre en anticipant le comportement d'achat et les besoins des internautes.</p>
       </div>
-      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-file-text-o"></i>
-        <h4>Content Development</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
+      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-bullseye"></i>
+        <h4>Retargeting / Display</h4>
+        <p>Il est essentiel de mettre en place une stratégie efficace pour re-cibler les internautes afin de les inciter à acheter.</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-rocket"></i>
         <h4>Branding</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+        <p>L'image de marque est la représentation perçue par le public d'une entreprise.</p>
       </div>
-      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-camera"></i>
-        <h4>Video & Photography</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Portfolio Section -->
-<div id="works-section">
-  <div class="container"> <!-- Container -->
-    <div class="section-title">
-      <h2>Our Portfolio</h2>
-      <hr>
-      <div class="clearfix"></div>
-    </div>
-    <div class="categories">
-      <ul class="cat">
-        <li>
-          <ol class="type">
-            <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".web">Web Design</a></li>
-            <li><a href="#" data-filter=".app">App Development</a></li>
-            <li><a href="#" data-filter=".branding">Branding</a></li>
-          </ol>
-        </li>
-      </ul>
-      <div class="clearfix"></div>
-    </div>
-    <div class="row">
-      <div class="portfolio-items">
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/01.jpg" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small>
-                <div class="clearfix"></div>
-              </div>
-              <img src="img/portfolio/01.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/02.jpg" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small>
-                <div class="clearfix"></div>
-              </div>
-              <img src="img/portfolio/02.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/03.jpg" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small>
-                <div class="clearfix"></div>
-              </div>
-              <img src="img/portfolio/03.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/04.jpg" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small>
-                <div class="clearfix"></div>
-              </div>
-              <img src="img/portfolio/04.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/05.jpg" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small>
-                <div class="clearfix"></div>
-              </div>
-              <img src="img/portfolio/05.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/06.jpg" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Branding</small>
-                <div class="clearfix"></div>
-              </div>
-              <img src="img/portfolio/06.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding app">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/07.jpg" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development, Branding</small>
-                <div class="clearfix"></div>
-              </div>
-              <img src="img/portfolio/07.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/08.jpg" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small>
-                <div class="clearfix"></div>
-              </div>
-              <img src="img/portfolio/08.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
+      <div class="col-md-3 col-sm-6 service"> <i class="fa fa-file-text-o"></i>
+        <h4>Content dev</h4>
+        <p>Des sites pensés pour votre rentabilité. Une plateforme évolutive et ouverte sur le monde.</p>
       </div>
     </div>
   </div>
 </div>
+
 <!-- Team Section -->
 <div id="team-section">
   <div class="container">
@@ -262,34 +149,66 @@
     </div>
     <div id="row">
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/01.jpg" alt="..." class="team-img">
+        <div class="thumbnail"> <img src="img/team/julien.jpg" alt="..." class="team-img">
           <div class="caption">
-            <h3>John Doe</h3>
-            <p>Founder</p>
+            <h3>FONTAS Julien</h3>
+            <p>Chef de projet marketing</p>
           </div>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/02.jpg" alt="..." class="team-img">
+        <div class="thumbnail"> <img src="img/team/camille.jpg" alt="..." class="team-img">
           <div class="caption">
-            <h3>Mike Doe</h3>
+            <h3>PEZE Camille</h3>
             <p>Web Designer</p>
           </div>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/03.jpg" alt="..." class="team-img">
+        <div class="thumbnail"> <img src="img/team/arnaud.jpg" alt="..." class="team-img">
           <div class="caption">
-            <h3>Jane Doe</h3>
-            <p>Creative Director</p>
+            <h3>DELAVELLE Arnaud</h3>
+            <p>Consultant B2B</p>
           </div>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/04.jpg" alt="..." class="team-img">
+        <div class="thumbnail"> <img src="img/team/theo.jpg" alt="..." class="team-img">
           <div class="caption">
-            <h3>Larry Show</h3>
-            <p>Project Manager</p>
+            <h3>DOUMENG Théo</h3>
+            <p>Consultant B2C</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail"> <img src="img/team/thomas.jpg" alt="..." class="team-img">
+          <div class="caption">
+            <h3>LOISEAU Thomas</h3>
+            <p>Infographiste</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail"> <img src="img/team/rayane.jpg" alt="..." class="team-img">
+          <div class="caption">
+            <h3>MOKRI Rayane</h3>
+            <p>Développeur Web</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail"> <img src="img/team/franck.jpg" alt="..." class="team-img">
+          <div class="caption">
+            <h3>HILD Franck</h3>
+            <p>Développeur Web</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail"> <img src="img/team/ahmed.jpg" alt="..." class="team-img">
+          <div class="caption">
+            <h3>KADEH Ahmed</h3>
+            <p>Média Manager</p>
           </div>
         </div>
       </div>
@@ -300,32 +219,32 @@
 <div id="contact-section">
   <div class="container">
     <div class="section-title center">
-      <h2>Contact Us</h2>
+      <h2>Contact</h2>
       <hr>
     </div>
     <div class="col-md-4">
-      <h4>Contact info</h4>
+      <h4>Info</h4>
       <div class="space"></div>
-      <p><i class="fa fa-map-marker"></i>4321 California St,<br>
-        San Francisco, CA 12345</p>
+      <p><i class="fa fa-map-marker"></i>22 Impasse Charles Fourier,<br>
+        Toulouse, 31000</p>
       <div class="space"></div>
-      <p><i class="fa fa-envelope-o"></i>info@company.com</p>
+      <p><i class="fa fa-envelope-o"></i>dix.pourcent@gmail.com</p>
       <div class="space"></div>
-      <p><i class="fa fa-phone"></i>+1 123 456 1234</p>
+      <p><i class="fa fa-phone"></i>+33 58 69 47 25</p>
     </div>
     <div class="col-md-8">
-      <h4>Leave us a message</h4>
+      <h4>Ecrivez-nous : </h4>
       <form name="sentMessage" id="contactForm" novalidate>
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <input type="text" id="name" class="form-control" placeholder="Name" required="required">
+              <input type="text" id="Nom" class="form-control" placeholder="Name" required="required">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <input type="email" id="email" class="form-control" placeholder="Email" required="required">
+              <input type="Email" id="email" class="form-control" placeholder="Email" required="required">
               <p class="help-block text-danger"></p>
             </div>
           </div>
@@ -335,7 +254,7 @@
           <p class="help-block text-danger"></p>
         </div>
         <div id="success"></div>
-        <button type="submit" class="btn btn-default">Send Message</button>
+        <button type="submit" class="btn btn-default">Envoyer</button>
       </form>
     </div>
   </div>
@@ -344,12 +263,8 @@
   <div class="container">
     <div class="social">
       <ul>
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://www.facebook.com/dix.pourcent.35"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="https://twitter.com/10_pour_cent"><i class="fa fa-twitter"></i></a></li>
       </ul>
     </div>
   </div>
